.provarCaches/00D5f000005vwGkEAI/objects/rstkf__gltxn2__c.object
<CustomObject>
    <description>gltxn2__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_acctdate__c</fullName>
        <inlineHelpText>Represents the date that this transaction impacts the GL</inlineHelpText>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_apapplicforex__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Foreign Exchange Gain/Loss from the application of a Vendor Credit to a Vendor Invoice (APAPPLICFOREX), which was the source of this transaction</inlineHelpText>
        <label>Foreign Exchange Gain/Loss on App</label>
        <referenceTo>rstkf__apapplicforex__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_apinvdist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Payable Distribution record (APINVDIST) associated with this transaction</inlineHelpText>
        <label>Payable Session Distribution</label>
        <referenceTo>rstkf__apinvdist__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Payable Session Transaction (APINVTXN) that was the source of this transaction</inlineHelpText>
        <label>Payable Session Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_apinvtxnforex__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Foreign Exchange Gain/Loss from a Vendor Invoice (APINVTXNFOREX), which was the source of this transaction</inlineHelpText>
        <label>Foreign Exchange Gain/Loss on Invoice</label>
        <referenceTo>rstkf__apinvtxnforex__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_appayd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Payment Session Detail (APPAYD) associated with this transaction</inlineHelpText>
        <label>Payment Session Detail</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_appayd_apapplic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Payable Application transaction (APAPPLIC) that was the source of this transaction</inlineHelpText>
        <label>Payables Application</label>
        <referenceTo>rstkf__apapplic__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_arcashd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Receipts Detail</label>
        <referenceTo>rstkf__arcashd__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_arcashddist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Cash Receipt Distribution record (ARCASHDIST) that was the source of this transaction</inlineHelpText>
        <label>AR Cash</label>
        <referenceTo>rstkf__arcashddist__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_arinvdist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxn_arinvdist__c</description>
        <inlineHelpText>The Receivable Session Distribution record (ARINVDIST) associated with this transaction</inlineHelpText>
        <label>Receivable Session Distribution</label>
        <referenceTo>rstkf__arinvdist__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_arinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxn_arinvtxn__c</description>
        <inlineHelpText>The Receivable Transaction (ARINVTXN) that was the source of this transaction</inlineHelpText>
        <label>Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_begbaltxn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this transaction is for initializing a beginning balance for the given GL Account for the GL Fiscal Year and Period specified on transaction</inlineHelpText>
        <label>Beginning Balance Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_cramt__c</fullName>
        <inlineHelpText>The amount crediting the given GL Account with this transaction for the Fiscal Year/Period defined</inlineHelpText>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_createdgltxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created GL Transaction</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>GL Transaction Staging (GL Transaction Created)</relationshipLabel>
        <relationshipName>createdfromgltxn2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_customfields__c</fullName>
        <inlineHelpText>Serialize the Field API Name, the Data Type and the Field value on the current record into the GLTXN2_CUSTOMFIELDS field</inlineHelpText>
        <label>Serialized Custom Field Data</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_dimval1__c</fullName>
        <inlineHelpText>The Dimension 1 value (as defined on the Mfg Company Master) associated with this transaction</inlineHelpText>
        <label>Dimension 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_dimval2__c</fullName>
        <inlineHelpText>The Dimension 2 value (as defined on the Mfg Company Master) associated with this transaction</inlineHelpText>
        <label>Dimension 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_dimval3__c</fullName>
        <inlineHelpText>The Dimension 3 value (as defined on the Mfg Company Master) associated with this transaction</inlineHelpText>
        <label>Dimension 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_dramt__c</fullName>
        <inlineHelpText>The amount debiting the given GL Account with this transaction for the Fiscal Year/Period defined</inlineHelpText>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The GL Account impacted by this transaction</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glbankstmtdist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Statement GL Distribution record (GLBANKSTMTDIST) that was the source of this transaction</inlineHelpText>
        <label>Statement GL Distribution</label>
        <referenceTo>rstkf__glbankstmtdist__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Division in which the transaction occurred.  Note that transactions originating from Manufacturing will always have a Division assigned; manually entered Financial transactions may or may not be defined with a Division.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glfa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Fixed Asset</description>
        <label>Related Fixed Asset</label>
        <referenceTo>rstkf__glfa__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glfatxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxn_glfatxn__c</description>
        <label>Fixed Asset Transaction</label>
        <referenceTo>rstkf__glfatxn__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_gljd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The General Journal Entry detail (GLJD) that was the source of this transaction</inlineHelpText>
        <label>Journal Entry Detail</label>
        <referenceTo>rstkf__gljd__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_gljed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Journal Detail record (GLJED) created on the Manufacturing side for an Inventory Cost Transaction (aka Rootstock Cost Transaction)</inlineHelpText>
        <label>Cost Transaction Detail</label>
        <referenceTo>rstk__gljed__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_gljh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Journal</label>
        <referenceTo>rstkf__gljh__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glperiod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxn_glperiod</description>
        <label>Fiscal Period Lookup</label>
        <referenceTo>rstkf__glperiod__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glproctxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If the source transaction predefined a GL Transaction Group (GLPROCTXN), this is the Transaction Group that this transaction was contained in</inlineHelpText>
        <label>Transaction Group</label>
        <referenceTo>rstkf__glproctxn__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Financial Project impacted by this transaction</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_gltxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related GL Transaction</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>GL Transaction Staging</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_gltxnsum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxn_gltxnsum__c</description>
        <label>GL Transaction Summary</label>
        <referenceTo>rstkf__gltxnsum__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Fiscal Year impacted by this transaction</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_homecurr__c</fullName>
        <formula>TEXT(rstkf__gltxn_glacct__r.rstkf__glacct_cmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_homecurr__r.rstk__sycurr_currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_isyearendadj__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this transaction is a year-end adjustment transaction for the given GL Account for the Fiscal Year defined</inlineHelpText>
        <label>Year End Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_period__c</fullName>
        <inlineHelpText>The Fiscal Period (within the Fiscal Year defined) impacted by this transaction</inlineHelpText>
        <label>Fiscal Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_povendcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_republishcount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Event Republish Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_rtdept__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Department</label>
        <referenceTo>rstk__rtdept__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_source__c</fullName>
        <inlineHelpText>A value that represents the &quot;source&quot; of this transaction.  See documentation for &quot;Source&quot; values.</inlineHelpText>
        <label>Source</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_sourcedesc__c</fullName>
        <description>Source Description</description>
        <inlineHelpText>Source Description</inlineHelpText>
        <label>Source Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_sytxncst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Rootstock Cost Transaction (SYTXNCST) from the Manufacturing side that was the source of this transaction</inlineHelpText>
        <label>Rootstock Cost Transaction</label>
        <referenceTo>rstk__sytxncst__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_syvattxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>gltxn_syvattxn__c</description>
        <label>VAT Transaction Number</label>
        <referenceTo>rstkf__syvattxn__c</referenceTo>
        <relationshipLabel>GL Transactions</relationshipLabel>
        <relationshipName>gltxn2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_temp__c</fullName>
        <label>Dummy Temp Field</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_trandate__c</fullName>
        <inlineHelpText>This is the date the transaction occurred.  It may differ from the Accounting Date if the transaction was back dated.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxn_tranno__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>System generated sequential unique identifier for this record</inlineHelpText>
        <label>Transaction Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Transaction Staging</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Transaction Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>